# Open-Docker-Monitoring

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
src/backend/: .dockerignore  Cargo.toml  Dockerfile  ODM.db  ODM.db-shm  ODM.db-wal
src/backend/src/: api_docs.rs  env.rs  error.rs  main.rs
src/backend/src/libs/: mod.rs
src/backend/src/libs/auth/: key.rs  mod.rs
src/backend/src/libs/crypto/: compare.rs  hash.rs
src/backend/src/libs/db/: get_pool.rs  init_db.rs  init_tables.rs  queries.rs
src/backend/src/libs/db/structs/: files.rs
src/backend/src/libs/docker/: add_new_docker.rs  check_docker_hearthbeat.rs  check_local_connection_exist.rs  check_local_connection_exist_db.rs  connect_to_docker.rs  create_docker_background_thread.rs  create_docker_listiner_worker.rs  does_docker_exist_db.rs  get_docker_connections_db.rs  get_usage.rs  init_docker_container_threads.rs  init_dockers.rs  is_docker_active.rs  list_containers.rs  list_containers_for_docker.rs  mod.rs  remove_docker_connection_db.rs  spawn_log_container_task.rs  store_docker_connection.rs
src/backend/src/libs/docker/docker_realtime_connections/: mod.rs  (+10 more)
src/backend/src/libs/util/: mod.rs  validate_protocol.rs
src/backend/src/routes/: mod.rs
src/backend/src/routes/auth/: get_auth_exists.rs  get_auth_validate.rs  mod.rs  post_auth_login.rs  post_auth_signup.rs  post_auth_signup_key.rs
src/backend/src/routes/docker/: delete_docker_name.rs  get_docker.rs  get_docker_containers.rs  mod.rs  post_docker.rs  socket_docker_usage.rs
src/backend/src/routes/files/: get_files_id.rs  post_files.rs
(+57 files in other folders)
